--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -12876,7 +12876,7 @@
       "source": [
         "**Conclusion**<br/>\n",
         "\n",
-        "A fundamental algorithm based on the linear regression method to predict housing prices was constructed. VIF, p-values and other tests were considered to ignore some of the independent variables. H20.ai framework was used to train and test the variables of the dataset of Melbourne Housing price. This gave the best model as ‘gbm’ and accuracy for test data was 89.9%. From the results shown it can be concluded that the proposed linear regression model can effectively analyze and predict the housing price to some extent. Admittedly, the prediction accuracy is still limited at specific points, and the model still needs to be improved in further research. In further research into the corresponding models, different techniques like removing outliers and using ensemble or booster can help achieve better prediction.\n"
+        "A fundamental algorithm based on the linear regression method to predict heart attack prediction was constructed. VIF, p-values and other tests were considered to ignore some of the independent variables. H20.ai framework was used to train and test the variables of the dataset of Heart attack analysis and Prediction. From the results shown it can be concluded that the proposed linear regression model can effectively analyze and predict the heart attack to some extent. Admittedly, the prediction accuracy is still limited at specific points, and the model still needs to be improved in further research. In further research into the corresponding models, different techniques like removing outliers and using ensemble or booster can help achieve better prediction.\n"
       ],
       "metadata": {
         "id": "bijsrxNI0JLQ"
@@ -12970,7 +12970,6 @@
         "OLS Model- http://net-informations.com/ds/mla/ols.html <br/>\n",
         "Linear Regression- https://www.analyticsvidhya.com/blog/2021/05/all-you-need-to-know-about-your-first-machine-learning-model-linear-regression/<br/>\n",
         "Linear Regression Assumptions- https://www.statisticssolutions.com/free-resources/directory-of-statistical-analyses/assumptions-of-linear-regression/<br/>\n",
-        "Kaggle Notebook- https://www.kaggle.com/stephaniestallworth/melbourne-housing-market-eda-and-regression<br/>\n",
         "Dataset-  https://www.kaggle.com/datasets/rashikrahmanpritom/heart-attack-analysis-prediction-dataset <br/>\n",
         "Greeshma's AutoML Notebook - https://github.com/aiskunks/YouTube/blob/main/A_Crash_Course_in_Statistical_Learning/AutoML/CC_Kaggle_AutoML_Regression_Melbourne_Housing.ipynb <br/>\n",
         "Professor's AutoML Notebook- https://github.com/nikbearbrown/AI_Research_Group/tree/main/Kaggle_Datasets/AutoML <br/>"
