--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -12876,7 +12876,7 @@
       "source": [
         "**Conclusion**<br/>\n",
         "\n",
-        "A fundamental algorithm based on the linear regression method to predict heart attack prediction was constructed. VIF, p-values and other tests were considered to ignore some of the independent variables. H20.ai framework was used to train and test the variables of the dataset of Heart attack analysis and Prediction. From the results shown it can be concluded that the proposed linear regression model can effectively analyze and predict the heart attack to some extent. Admittedly, the prediction accuracy is still limited at specific points, and the model still needs to be improved in further research. In further research into the corresponding models, different techniques like removing outliers and using ensemble or booster can help achieve better prediction.\n"
+        "A fundamental algorithm based on the logistic regression method to predict heart attack prediction was constructed. VIF, p-values and other tests were considered to ignore some of the independent variables. H20.ai framework was used to train and test the variables of the dataset of Heart attack analysis and Prediction. From the results shown it can be concluded that the proposed linear regression model can effectively analyze and predict the heart attack to some extent. Admittedly, the prediction accuracy is still limited at specific points, and the model still needs to be improved in further research. In further research into the corresponding models, different techniques like removing outliers and using ensemble or booster can help achieve better prediction.\n"
       ],
       "metadata": {
         "id": "bijsrxNI0JLQ"
